@@ -1,3 +1,10 @@
+2008-12-02  Stephane Delcroix  <sdelcroix@novell.com>
+
+	* generator/Ctor.cs:
+	* generator/Method.cs:
+	* generator/MethodBase.cs: refactor the Protection from Method to
+	MethodBase, generate ctors with the correct proteciton too.
+
 2008-12-01  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/Gtk.metadata: automarshal TreeSelection.GetSelectedRows.
